# DA_digitaler_Anhang

./: README.md  pyproject.toml  simmodell.mo  training_FMUEnv.py  training_main.py
analysis/: compare_agents.py  gaussian_head.py  hp_tables.py  tanh_activation_function.py  test_variable.py  wp_test.py
analysis/compare_fmus/: compare_fmus.py
analysis/experiments/: 2024-06-14_Shango_EMS-Parameter_List.xlsx  20241204T171059Z-experiment_weather_wp_check.feather  T_VL_experiment.py  Translator_HIL.csv  V_dot_experiment.py  Vdot_Ablesedaten.csv  examine_corruption.py  other_vars_experiment.py
analysis/pressure_drop/: 20241112T080823Z-pressuredrop.feather  20241118T092419Z-experiment_weather_dp_1.feather  evaluate_dp.py
analysis/weather/: 1_day_of_fall.mos  DEU_Berlin.103840_IWEC.csv  DEU_Berlin.103840_IWEC.mos  DEU_Berlin.103840_IWEC_experiment.mos  Formatvorlage_weatherfile.csv  experiment_temperature_steps.csv  experiment_weather_dp.csv  experiment_weather_wp_check.csv  experiment_weather_wp_check_0degC.csv  make_weather.py  make_weather_HiL.py  make_weather_dp.py  make_weather_dymola.py  make_weather_steps.py
fmu/: WP_tableP_ele.mat  WP_tableQdot_con.mat
functions/HiL/: hil_connector.py  twv_pid.py
functions/fmu_scripts/: fmu_test.py  generate_agent_results.py  generate_baseline_results.py  get_jump_response.py  get_steady_state.py  sample_initial_conditions.py  set_conditions.py  training_eval.py
functions/functions/: heatcurves.py  jump_function.py
functions/helper/: calculate_energy.py  callback.py  curriculum_manager.py  mat_reader.py  plot_helper.py  (+3 more)
(+12 files in other folders)
