[tool.poetry]
name = "rl_and_hil_1"
version = "0.1.0"
description = ""
authors = ["Antonia S."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
matplotlib = "^3.7"
fmpy = "^0.3.20"
fmugym = "^0.1.0"
notebook = "^7.2.2"
stable-baselines3 = "*"
dymat = "^0.7"
scipy = "^1.14.1"
tabulate = "^0.9.0"
pyarrow = "^18.0.0"
plotly = "^5.24.1"
control = "^0.10.1"
tensorboard = "^2.20.0"
sb3-contrib = "^2.7.0"
ipykernel = "<6.30"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
